# entropy

./: .envrc  CHANGELOG.md  CMakeLists.txt  README.md  run.sh
include/entropy/: noisegen.hpp
test/: test_advanced_properties.cpp  test_basic_functionality.cpp  test_fractal_types.cpp  test_noise_types.cpp
